Got pages to wrap correctly according to mockup. Got all pages to look like their mockup counterparts. Added Background Image. Need to add styles, fonts, and font-sizes for headings next

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,13 @@ p img {
     height: 200px;
     width: 200px;
 }
+
+.my-name{
+    background-color: #30bbbb;
+}
+
+body {
+    height: auto;
+    width: 100%;
+    background-image: url(../images/ignasi_pattern_s.png);
+}
